<resources>
    <string name="app_name" translatable="false">Blint</string>
    <string name="app_slogan" translatable="false">make it simpler</string>
    <string name="app_version">Version</string>
    <string name="app_version_number" translatable="false">1.0.1-a2</string>
    <string name="app_name_lowercase_with_dot" translatable="false">blint.</string>
    <string name="home_label">Home</string>
    <string name="products_label">Products</string>
    <string name="clients_label">Clients</string>
    <string name="orders_label">Orders</string>
    <string name="reports_label">Reports</string>
    <string name="calendar_label">Calendar</string>
    <string name="suppliers_label">Suppliers</string>
    <string name="notifications_label">Notifications</string>
    <string name="settings_label">Settings</string>
    <string name="account_label">Account</string>
    <string name="tools_label">Tools</string>
    <string name="debts_label">Debts</string>
    <string name="categories_label">Categories</string>
    <string name="scanner_label">Scan code</string>
    <string name="register_business_label">Register business</string>
    <string name="client_label">Client</string>
    <string name="supplier_label">Supplier</string>
    <string name="product_label">Product</string>
    <string name="help_label">Help</string>
    <string name="register_local_business_label">Register local business</string>
    <string name="register_online_business_label">Register online business</string>
    <string name="about_us_label">About blint</string>
    <string name="backup_label">Create backup</string>
    <string name="restore_backup_label">Restore backup</string>
    <string name="general_edition_label">General edition</string>
    <string name="import_data_label">Import external data</string>
    <string name="new_event_label">New event</string>
    <string name="generate_report_label">Generate report</string>
    <string name="my_business_label">My business</string>
    <string name="employee">Employee</string>
    <string name="new_employee_label">New employee</string>
    <string name="review_order_label">Review order</string>
    <string name="publish_order_label">Publish order</string>
    <string name="new_order_label">New oder</string>
    <string name="order_label">Order</string>
    <string name="debt_label">Debt</string>
    <string name="update_debt_label">Update debt</string>
    <string name="ticket_label" translatable="false">Ticket</string>
    <string name="action_send">Send</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_rate_us_on_google_play">Rate us on the Play Store</string>
    <string name="action_read_privacy_policy">Read our privacy policies</string>
    <string name="action_delete">Delete</string>
    <string name="action_no">No</string>
    <string name="action_accept">Accept</string>
    <string name="action_call">Call</string>
    <string name="action_message">Message</string>
    <string name="action_whats_app">WhatsApp</string>
    <string name="action_yes">Yes</string>
    <string name="action_exit">Exit</string>
    <string name="action_next">Next</string>
    <string name="action_add">Add</string>
    <string name="action_back">Previous</string>
    <string name="action_finish">Finish</string>
    <string name="action_close">Close</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="problems_and_advice">Suggestions or message</string>
    <string name="tell_us_more">What do you want to tell us?</string>
    <string name="message_hint">Message</string>
    <string name="create_backup_in_progress">Backup in progress..</string>
    <string name="do_not_close_window_until_backup_is_done">*Do not leave the app until the backup is done.</string>
    <string name="create_backup_success_title">Backup done.</string>
    <string name="create_backup_error_title">Backup failed.</string>
    <string name="create_backup_success_message">*Backup completed successfully. Have a nice day.</string>
    <string name="create_backup_error_message">There was a problem backing up your business. Please try again later.</string>
    <string name="create_backup_warning">This will replace the last backup of your existing business or create a new one. Please note that we cannot save your images so they are not covered by the backing.</string>
    <string name="ask_user_action_confirmation">Are your sure about this action?</string>
    <string name="searching_your_info_server">Looking up your data in the servers…</string>
    <string name="action_read_more_about_backups">Read more about backups.</string>
    <string name="last_backup">Last backup:</string>
    <string name="your_local_business">Your local business</string>
    <string name="action_create_businesses_backup">Backup business</string>
    <string name="backup_only_for_local_business_alert">*Keep in mind that only local businesses can be backed up / restored since in online businesses your business is already in the cloud.</string>
    <string name="create_backup_affects_this_businesses_alert">The backup affects these businesses, the backup is not from a single location, it backs up everything.</string>
    <string name="restore_backup_warning">This will restore your business from the last copy you uploaded to the cloud, all the information you have will be erased and replaced by the backup copy. Please note that the images will not be restored.</string>
    <string name="restore_backup_success_message">* Restoration carried out satisfactorily. Have a nice day.</string>
    <string name="restore_backup_success_title">Restoration completed</string>
    <string name="restore_backup_error_title">Restoration failed</string>
    <string name="restore_backup_error_message">"*A problem occurred restoring your business. A problem occurred restoring your business. This may be due to not finding a backed up version of your business or server problems.\nTry again later."</string>
    <string name="action_restore_businesses_backup">Restore business</string>
    <string name="restore_backup_affects_this_businesses_alert">The restoration will affect these businesses, the backup is not from a single location, it supports everything.</string>
    <string name="action_create_backup">Backup</string>
    <string name="action_restore_backup">Restore backup</string>
    <string name="code_generated">Code generated.</string>
    <string name="generating_code">Generating code..</string>
    <string name="code">Code</string>
    <string name="valid_for">Valid for:</string>
    <string name="join_business_with_code_alert">You must share the joining code, in QR or text format and the person to join has to scan or type it manually to join your business.\n\nFor your security and that of your business, the codes last 10 minutes, then another will be generated automatically.</string>
    <string name="generating_code_alert">We are generating a code so that your employees can joint your business</string>
    <string name="join_my_business_with_code">Join my business in Blint with this code!</string>
    <string name="copied_to_clipboard">Code copied to clipboard.</string>
    <string name="action_scan_code">Scan code</string>
    <string name="with_qr_code">With QR code</string>
    <string name="snack_type_or_scan_code_to_continue">Type a code or scan the QR code to continue</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="incorrect_or_expired_code">The code is incorrect or it has expired, ask the business administrator to verify it</string>
    <string name="qr">QR</string>
    <string name="snack_an_error_occurred">A problem occurred.</string>
    <string name="snack_require_contact_permission">Access to your contacts is necessary to perform this action</string>
    <string name="snack_error_connection_server_try_later">There was a problem reaching our servers. Try again later.</string>
    <string name="snack_ups_visit_blint">Ups, something broke. Visit Blint.app for more info.</string>
    <string name="snack_require_camera_permission">Access to your camera is necessary to perform this action</string>
    <string name="snack_send_suggestion_report_success">Report sent successfully, Thanks for your feedback!</string>
    <string name="snack_wait_for_operation">Please wait for the operation to complete.</string>
    <string name="snack_amount_cant_be_empty">The amount can not be empty or zero</string>
    <string name="snack_text_empty">The text field can not be empty.</string>
    <string name="snack_the_text_cant_contain_special_chars">The text field can not contain special characters.</string>
    <string name="snack_text_min_max_length">The text field has to be at between 3 and 15 characters in length.</string>
    <string name="snack_name_empty">The name not be empty.</string>
    <string name="snack_name_cant_contain_special_chars">The name can not contain special characters.</string>
    <string name="snack_name_min_max_length">The name has to be at between 3 and 50 characters in length.</string>
    <string name="action_require_permissions">No permission to perform this action.</string>
    <string name="snack_action_success">The task was carried out satisfactorily.</string>
    <string name="do_you_want_to_delete_business">Do yo want to delete this business?</string>
    <string name="delete_business_warning_dialog">Danger zone! Be aware this action will disable your business for 15 days and then it will be deleted permanently.</string>
    <string name="delete_local_business_warning_dialog">Danger zone! Keep in mind that this will eliminate your business and is irreversible.</string>
    <string name="delete_business_warning">*For your safety when deleting a business, first we will disable your business for 15 days in case you change your mind, in this period no one can operate in the business. After the 15 days are completed, it will be automatically deleted and this action is irreversible.</string>
    <string name="read_more">Read more</string>
    <string name="action_accept_terms_and_conditions">I accept the terms and conditions.</string>
    <string name="select_country">Select a country</string>
    <string name="selected_country">Country selected</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="set_name_alert">*Keep in mind that your name will be visible for other people in your same business. You can not change it later.</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="not_specified">Not specified</string>
    <string name="select_supplier">Select supplier</string>
    <string name="ask_order_type_title">What is the type of the order?</string>
    <string name="in_entry">In</string>
    <string name="order_type_alert">*It is not necessary to specify a client/ supplier but it is important to keep your business well organized.</string>
    <string name="my_account_pref">My account</string>
    <string name="backup_pref">Backups</string>
    <string name="themes_pref">Themes</string>
    <string name="help_pref">Help</string>
    <string name="about_us_pref">About Blint</string>
    <string name="options">Options</string>
    <string name="new_supplier">New supplier</string>
    <string name="new_product">New product</string>
    <string name="action_edit">Edit</string>
    <string name="new_order">New order</string>
    <string name="search">Search</string>
    <string name="app_logo_image">app logo</string>
    <string name="send_ticket_label">Send ticket</string>
    <string name="faq" translatable="false">F.A.Q.</string>
    <string name="help_ticket_message">If your question is not solved, we invite you to send us a ticket and we will contact you shortly by e-mail.</string>
</resources>