<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="@string/my_account_pref"
        android:key="account_pref"
        android:icon="@drawable/ic_baseline_account_circle_24"/>

    <Preference
        android:title="@string/notifications_label"
        app:icon="@drawable/ic_baseline_notifications_24"
        android:key="notifications_pref"
        android:fragment="com.puntogris.blint.ui.settings.NotificationsPreferences"/>

    <Preference
        android:title="@string/backup_pref"
        android:key="backup_pref"
        android:icon="@drawable/ic_baseline_backup_24"
        android:fragment="com.puntogris.blint.ui.settings.BackupPreferences"/>

    <ListPreference
        android:title="@string/themes_pref"
        app:icon="@drawable/ic_baseline_style_24"
        android:defaultValue="1"
        android:key="theme_pref"
        android:entries="@array/theme_names"
        android:entryValues="@array/theme_values"/>

    <Preference
        android:title="@string/help_pref"
        android:key="help_pref"
        android:icon="@drawable/ic_baseline_help_24" />

    <Preference
        android:title="@string/about_us_pref"
        app:iconSpaceReserved="false"
        android:key="about_pref"/>

</PreferenceScreen>