<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/moreOptions"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/options"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/editOption"
                android:title="@string/action_edit" />
            <item
                android:id="@+id/createOrder"
                android:title="@string/new_order"
                android:visible="false" />
            <item
                android:id="@+id/updateDebt"
                android:title="@string/debts_label"
                android:visible="false" />
            <item
                android:id="@+id/deleteOption"
                android:title="@string/action_delete" />

        </menu>
    </item>
    <item
        android:id="@+id/manageProductFragmentMenu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/options"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/newProduct"
                android:title="@string/new_product" />
            <item
                android:id="@+id/manageCategories"
                android:title="@string/categories_label" />
        </menu>
    </item>

    <item
        android:id="@+id/manageSuppliersFragmentMenu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/options"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/newSupplier"
                android:title="@string/new_supplier" />
        </menu>
    </item>

    <item
        android:id="@+id/action_menu_add"
        android:title="@string/new_store"
        android:icon="@drawable/ic_fi_rr_plus"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/businessFragmentMenu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/options"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/deleteBusiness"
                android:title="@string/delete_store" />
        </menu>
    </item>

</menu>