<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.puntogris.blint.ui.help.HelpFragment" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.help.HelpFragment">

        <TextView
            android:id="@+id/textView206"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ticket_label" />

        <TextView
            android:id="@+id/textView205"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:text="@string/help_ticket_message" />

        <Button
            style="@style/Theme.Blint.Button"
            android:id="@+id/button18"
            android:onClick="@{()-> fragment.onCreateTicketClicked()}"
            android:layout_marginHorizontal="34dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_ticket_label" />

        <TextView
            android:id="@+id/textView207"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="?actionBarSize"
            android:scrollbars="vertical" />

    </LinearLayout>
</layout>