<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.puntogris.blint.ui.login.IntroFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        tools:context=".ui.login.IntroFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInput"
            style="@style/Theme.Blint.TextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView133">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/termsAndConditionsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:buttonTint="@color/grey_20"
            android:text="@string/action_accept_terms_and_conditions"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button12"
            app:layout_constraintEnd_toStartOf="@+id/textView26"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:onClick="@{()-> fragment.onReadMoreAboutPolicesClicked()}"
            android:padding="8dp"
            android:text="@string/read_more"
            android:textColor="@color/grey_20"
            app:layout_constraintBottom_toBottomOf="@+id/termsAndConditionsCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/termsAndConditionsCheckBox"
            app:layout_constraintTop_toTopOf="@+id/termsAndConditionsCheckBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/action_next"
            android:textColor="@color/almostBlack"
            app:shapeAppearanceOverlay="@style/Theme.Blint.RoundButtonShapeOverlay"
            android:onClick="@{()-> fragment.onGoToSyncUserBusiness()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button112"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/action_exit"
            android:onClick="@{()->fragment.onExitButtonClicked()}"
            android:textColor="@color/almostBlack"
            android:layout_marginBottom="16dp"
            app:shapeAppearanceOverlay="@style/Theme.Blint.RoundButtonShapeOverlay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_country"
            android:textColor="@color/almostBlack"
            android:onClick="@{()->fragment.onSelectCountryClicked()}"
            app:shapeAppearanceOverlay="@style/Theme.Blint.RoundButtonShapeOverlay"
            app:layout_constraintBottom_toBottomOf="@+id/textView132"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView131"
            app:layout_constraintTop_toTopOf="@+id/textView131" />

        <TextView
            android:id="@+id/textView131"
            style="@style/Theme.Blint.DataSubTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/selected_country"
            android:textColor="@color/grey_20"
            app:layout_constraintEnd_toStartOf="@+id/button15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView134" />

        <TextView
            android:id="@+id/textView132"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_specified"
            android:textColor="@color/white"
            style="@style/Theme.Blint.DataTextView"
            app:layout_constraintStart_toStartOf="@+id/textView131"
            app:layout_constraintTop_toBottomOf="@+id/textView131" />

        <TextView
            android:id="@+id/textView133"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tell_us_about_you"
            android:textColor="@android:color/white"
            android:fontFamily="@font/versatile_bold"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView134"
            android:layout_width="0dp"
            android:textColor="@color/grey_20"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/set_name_alert"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>